<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <!-- trocar os icones -->

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/md_op1" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/md_op2" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/md_op3" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/md_op4" />
    </group>

    <item android:title="@string/md_cat1">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/md_op5" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/md_op6" />
        </menu>
    </item>

</menu>
